apps/home-assistant/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
