apps/home-assistant/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  ingressClassName: tailscale
  rules:
  - host: home-assistant
    http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - home-assistant
